objects/Tender_Competitor__c.object
<CustomObject>
    <description>This object is used to define the main competitors in a Tender</description>
    <fields>
        <fullName>Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used for the entering Allocation percentage valule for the competitor</description>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor_TAM_Allocation__c</fullName>
        <description>manual entry for TAM allocation for the product line for this competitor</description>
        <inlineHelpText>Please fill in the $$ TAM allocation for this Competitor and the Product Line</inlineHelpText>
        <label>Competitor TAM Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Tender_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_line__c</fullName>
        <description>contains Product line values</description>
        <label>Product line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cable Ident</fullName>
                </value>
                <value>
                    <fullName>Datanet &amp; Fiber Optics Connectors</fullName>
                </value>
                <value>
                    <fullName>DC Switching Devices</fullName>
                </value>
                <value>
                    <fullName>High Voltage</fullName>
                </value>
                <value>
                    <fullName>Relays &amp; Contactors</fullName>
                </value>
                <value>
                    <fullName>Resistors</fullName>
                </value>
                <value>
                    <fullName>Ruggedized Connectors</fullName>
                </value>
                <value>
                    <fullName>Wire &amp; Cable</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Datanet &amp; Fiber Optics Switching</fullName>
                </value>
                <value>
                    <fullName>Signal Connectors</fullName>
                </value>
                <value>
                    <fullName>Tubing &amp; Molded Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TAM_Per_Car__c</fullName>
        <description>contains the value TAM Per Car(from Tender details)*Allocation value</description>
        <label>TAM Per Car</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAM_Tender_Total__c</fullName>
        <description>Contains The value TAM _Tender_Total(from tender details) * Allocation</description>
        <label>TAM Tender Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tender__c</fullName>
        <description>Lookup to Tender</description>
        <label>Tender</label>
        <referenceTo>Tender__c</referenceTo>
        <relationshipLabel>Tender Competitors</relationshipLabel>
        <relationshipName>Tender_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Tender Competitor</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Tender Competitor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tender Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allocation_validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(( Allocation__c   &lt; 0.0), ( Allocation__c  &gt; 1.0))</errorConditionFormula>
        <errorDisplayField>Allocation__c</errorDisplayField>
        <errorMessage>Allocation must be  Between ZERO To 100</errorMessage>
    </validationRules>
</CustomObject>